added concurrent update to queues, updates to the pom to prepare version 2.0.0